crates/bnfgen-core/src/grammar/snapshots/bnfgen__grammar__test__duplicated_def.snap
---
source: src/grammar/mod.rs
expression: ui
snapshot_kind: text
---
  × Duplicated rules found
   ╭─[2:13]
 1 │ 
 2 │             <E> ::= <S>;
   ·             ──────┬─────
   ·                   ╰── previous defined here
 3 │             <S> ::= <E>;
 4 │             <E> ::= "?";
   ·             ──────┬─────
   ·                   ╰── this rule is duplicated
 5 │         
   ╰────
