crates/bnfgen-core/src/grammar/snapshots/bnfgen__grammar__test__trap_loop.snap
---
source: src/grammar/mod.rs
expression: ui
---
  × May be trapped in a dead loop
   ╭─[3:13]
 2 │             <E> ::= <D> | <F>;
 3 │             <C> ::= <D> ;
   ·             ──────┬──────
   ·                   ╰── this rule may be trapped in a dead loop
 4 │             <D> ::= <C> ;
   ·             ──────┬──────
   ·                   ╰── this rule may be trapped in a dead loop
 5 │             <F> ::= <G> ;
   ╰────
