crates/bnfgen-core/src/grammar/snapshots/bnfgen__grammar__test__undefined_nt.snap
---
source: src/grammar/mod.rs
expression: ui
---
  × Undefined non-terminal
   ╭────
 1 │ <E> ::= <S>;
   ·         ─┬─
   ·          ╰── this non-terminal is undefined
   ╰────
